data/all_generated_tests/raw_wast_tests/if_InfiniteLoops_1542.wast
;; 3. **Test Description**: An `if` block that conditionally enters another `loop` based on stack condition. The loop body contains additional `if` conditions with complex branching that may either re-enter the initial loop or break from it.    **Constraint Checked**: Ensures correct `if` condition evaluation and nested loop handling.    **Relation to Infinite Loops**: Incorrect `if` evaluation or branching might result in the loop never being exited properly, leading to an infinite loop.

(assert_invalid
  (module
    (func $complex_if_loop
      (block $top
        (loop $inner
          (if (result i32) (i32.const 1)
            (then
              (if (result i32)
                (i32.const 0)
                (then (br $inner))
                (else (i32.const 1))
              )
            )
            (else (br $top))
          )
        )
      )
    )
  )
  "type mismatch"
)